--- a/index.html
+++ b/index.html
@@ -5,28 +5,27 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Nuqtazi Ziyaa Fotografi Manajemen</title>
 <link rel="manifest" href="manifest.json">
+
 <!-- Firebase SDK -->
-<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
 <script>
+  // ====== Konfigurasi Firebase ======
   const firebaseConfig = {
-  apiKey: "API_KEY",
-  authDomain: "PROJECT_ID.firebaseapp.com",
-  projectId: "PROJECT_ID",
-  storageBucket: "PROJECT_ID.appspot.com",
-  messagingSenderId: "SENDER_ID",
-  appId: "APP_ID"
-};
-firebase.initializeApp(firebaseConfig);
-const db = firebase.firestore();
+    apiKey: "API_KEY",
+    authDomain: "PROJECT_ID.firebaseapp.com",
+    projectId: "PROJECT_ID",
+    storageBucket: "PROJECT_ID.appspot.com",
+    messagingSenderId: "SENDER_ID",
+    appId: "APP_ID"
+  };
+
+  // ====== Inisialisasi Firebase ======
   firebase.initializeApp(firebaseConfig);
   const db = firebase.firestore();
 </script>
-  <!-- Firebase App (core SDK) -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<!-- Firebase Firestore -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
 <style>
 body{
   margin:0;
@@ -171,7 +170,7 @@ button.primary{
   </div>
 
   <div class="card">
-<input type="date" id="filterTanggal" onchange="render()">
+    <input type="date" id="filterTanggal" onchange="renderJobs()">
     <h3>Daftar Job</h3>
     <div id="listJob"></div>
   </div>
@@ -192,10 +191,6 @@ button.primary{
 </section>
 
 <script>
-let klien = JSON.parse(localStorage.getItem('klien') || '[]');
-let job   = JSON.parse(localStorage.getItem('job') || '[]');
-let uang  = JSON.parse(localStorage.getItem('uang') || '[]');
-
 /* ================= TAB ================= */
 function showTab(id,el){
   document.querySelectorAll('section').forEach(s=>s.classList.remove('active'));
@@ -204,133 +199,127 @@ function showTab(id,el){
   el.classList.add('active');
 }
 
-/* ================= SAVE ================= */
-function save(){
-  localStorage.setItem('klien', JSON.stringify(klien));
-  localStorage.setItem('job', JSON.stringify(job));
-  localStorage.setItem('uang', JSON.stringify(uang));
-  render();
-}
-
-/* ================= KLIEN ================= */
+/* ================= FIRESTORE OPERATIONS ================= */
+// Tambah Klien
 function tambahKlien(){
-  klien.push({
-    nama: kNama.value,
-    kontak: kKontak.value,
-    tipe: kTipe.value
-  });
-  kNama.value = kKontak.value = '';
-  save();
+  const nama = document.getElementById('kNama').value;
+  const kontak = document.getElementById('kKontak').value;
+  const tipe = document.getElementById('kTipe').value;
+
+  db.collection("klien").add({ nama, kontak, tipe })
+    .then(() => {
+      document.getElementById('kNama').value = '';
+      document.getElementById('kKontak').value = '';
+      renderKlien();
+    });
 }
 
-/* ================= JOB ================= */
+// Render Klien
+function renderKlien(){
+  db.collection("klien").get().then(snapshot => {
+    const list = document.getElementById('listKlien');
+    list.innerHTML = '';
+    snapshot.forEach(doc => {
+      const k = doc.data();
+      list.innerHTML += `
+        <div class="list-item">
+          ${k.nama}
+          <div class="small">${k.tipe}</div>
+        </div>
+      `;
+    });
+
+    // Update select job
+    const jKlien = document.getElementById('jKlien');
+    jKlien.innerHTML = '';
+    snapshot.forEach(doc => {
+      const k = doc.data();
+      jKlien.innerHTML += `<option>${k.nama}</option>`;
+    });
+
+    document.getElementById('totalKlien').innerText = snapshot.size;
+  });
+}
+
+// Tambah Job
 function tambahJob(){
-  job.push({
-    nama: jNama.value,
-    tanggal: jTanggal.value,
-    klien: jKlien.value,
-    harga: +jHarga.value,
-    status: jStatus.value
+  const nama = document.getElementById('jNama').value;
+  const tanggal = document.getElementById('jTanggal').value;
+  const klien = document.getElementById('jKlien').value;
+  const harga = Number(document.getElementById('jHarga').value);
+  const status = document.getElementById('jStatus').value;
+
+  db.collection("job").add({ nama, tanggal, klien, harga, status })
+    .then(() => {
+      document.getElementById('jNama').value = '';
+      document.getElementById('jHarga').value = '';
+      renderJobs();
+    });
+}
+
+// Render Job
+function renderJobs(){
+  const tglFilter = document.getElementById('filterTanggal').value;
+  db.collection("job").get().then(snapshot => {
+    const listJob = document.getElementById('listJob');
+    listJob.innerHTML = '';
+    let totalJob = 0;
+    let totalUang = 0;
+
+    snapshot.forEach(doc => {
+      const j = doc.data();
+      if(!tglFilter || j.tanggal === tglFilter){
+        listJob.innerHTML += `
+          <div class="list-item">
+            ${j.nama} 
+            <div class="small">${j.tanggal} • ${j.status}</div>
+          </div>
+        `;
+        totalJob++;
+        totalUang += j.harga;
+      }
+    });
+
+    document.getElementById('totalJob').innerText = totalJob;
+    document.getElementById('totalUang').innerText = 'Rp ' + totalUang.toLocaleString('id-ID');
   });
-  jNama.value = jHarga.value = '';
-  save();
 }
 
-function hapusJob(i){
-  if(confirm('Hapus job ini?')){
-    job.splice(i,1);
-    save();
-  }
-}
-
-/* ================= KEUANGAN ================= */
+// Tambah Uang
 function tambahUang(){
-  uang.push({
-    jumlah: +uJumlah.value,
-    catatan: uCatatan.value
-  });
-  uJumlah.value = uCatatan.value = '';
-  save();
+  const jumlah = Number(document.getElementById('uJumlah').value);
+  const catatan = document.getElementById('uCatatan').value;
+
+  db.collection("uang").add({ jumlah, catatan })
+    .then(() => {
+      document.getElementById('uJumlah').value = '';
+      document.getElementById('uCatatan').value = '';
+      renderUang();
+    });
 }
 
-/* ================= TOTAL ================= */
-function hitungTotal(){
-  let total = job.reduce((sum,j)=>sum + Number(j.harga),0);
-  totalUang.innerText = 'Rp ' + total.toLocaleString('id-ID');
-}
-
-/* ================= GRAFIK ================= */
-function drawGrafik(){
-  const c = document.getElementById('grafik');
-  if(!c) return;
-  const x = c.getContext('2d');
-  x.clearRect(0,0,c.width,c.height);
-
-  let max = Math.max(...job.map(j=>j.harga),1);
-  job.forEach((j,i)=>{
-    let h = (j.harga/max)*100;
-    x.fillRect(i*30,120-h,20,h);
-  });
-}
-
-/* ================= EXPORT ================= */
-function exportPDF(){
-  let teks = job.map(j =>
-    `${j.tanggal} | ${j.nama} | ${j.status} | Rp ${j.harga}`
-  ).join('\n');
-
-  const blob = new Blob([teks], {type:'text/plain'});
-  const a = document.createElement('a');
-  a.href = URL.createObjectURL(blob);
-  a.download = 'laporan-job.txt';
-  a.click();
-}
-
-/* ================= RENDER ================= */
-function render(){
-  listKlien.innerHTML = klien.map(k=>`
-    <div class="list-item">
-      ${k.nama}
-      <div class="small">${k.tipe}</div>
-    </div>
-  `).join('');
-
-  jKlien.innerHTML = klien.map(k=>`<option>${k.nama}</option>`).join('');
-
-  const tgl = document.getElementById('filterTanggal')?.value;
-  const data = tgl ? job.filter(j=>j.tanggal===tgl) : job;
-
-  listJob.innerHTML = data.map((j,i)=>`
-    <div class="list-item">
-      ${j.nama}
-      <div class="small">${j.tanggal} • ${j.status}</div>
-      <button onclick="hapusJob(${i})">Hapus</button>
-    </div>
-  `).join('');
-
-  listUang.innerHTML = uang.map(u => `
-  <div class="list-item">
-    Rp ${u.jumlah.toLocaleString('id-ID')}
-    ${u.catatan ? `<div class="small">${u.catatan}</div>` : ''}
-  </div>
-`).join('');
-
-  totalKlien.innerText = klien.length;
-  totalJob.innerText = job.length;
-
-  hitungTotal();
-  drawGrafik();
-}
-
-render();
-</script>
-<script>
-// Register service worker
-if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('sw.js').then(() => {
-    console.log('Service Worker registered');
+// Render Uang
+function renderUang(){
+  db.collection("uang").get().then(snapshot => {
+    const listUang = document.getElementById('listUang');
+    listUang.innerHTML = '';
+    snapshot.forEach(doc => {
+      const u = doc.data();
+      listUang.innerHTML += `
+        <div class="list-item">
+          Rp ${u.jumlah.toLocaleString('id-ID')}
+          ${u.catatan ? `<div class="small">${u.catatan}</div>` : ''}
+        </div>
+      `;
+    });
   });
 }
+
+// ====== Inisialisasi render ======
+renderKlien();
+renderJobs();
+renderUang();
+
 </script>
 </body>
 </html>
